# slp-to-csv

./: README.md  environment.yml  for_debugging.csv  pyproject.toml
.github/workflows/: ci.yml
slp_to_csv/: __init__.py  main.py  version.py
tests/: conftest.py  test_main.py  test_version.py
